--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <div class="text-right">email : shells@gmail.com</div>
       <div class="text-right">facebook : @shells</div>
       <div class="text-right">viper : shells_viper</div></div></div></header>
-
+	    
+<img src="../images/stage_lighting.jpg" alt="Stage Lighting">
+	    
 <div class="grid grid-rows-none justify-items-center text-sm md:text-lg lg:text-xl xl:text-xl 2xl:text-xl"><div class="pb-5 mx-8">Shells Entertainment provides all your stage lighting &amp; audio show needs.
   </div>
 
