--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="text-right">viper : shells_viper</div></div></div></header>
 	    
 <img src="./shells/images/stage_lighting.jpg" alt="Stage Lighting">
-<img src="./shells/images/audio_413e3eb4.jpg" alt="Stage Lighting">	    
+<img src="./shells/images/audio_413e3eb4.jpg" alt="Audio Lighting">	    
 <!-- <img src="./shells/_app/immutable/assets/audio.413e3eb4.jpg" alt="Stage Lighting"> -->
 <div class="grid grid-rows-none justify-items-center text-sm md:text-lg lg:text-xl xl:text-xl 2xl:text-xl"><div class="pb-5 mx-8">Shells Entertainment provides all your stage lighting &amp; audio show needs.
   </div>
